更新前。。。